# SlopBERT

./: .env.example  .gitignore  BENCHMARK_README.md  README.md  app.py  benchmark.py  benchmark_visualizer.py  dataset_example.csv  lora_train.py  my_feeds.json  pyproject.toml  quantize.py  train.py  train_optimize.py
