[project]
name = "slopbert"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.5.2",
    "datasets>=3.4.1",
    "feedparser>=6.0.11",
    "matplotlib>=3.10.1",
    "pandas>=2.2.3",
    "peft>=0.15.1",
    "pytz>=2025.1",
    "rich>=13.9.4",
    "tldextract>=5.1.3",
    "torch>=2.6.0",
    "transformers>=4.49.0",
]
